force-app/main/default/objects/Feedback__c/fields/Description_of_Workflow__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Workflow__c</fullName>
    <description>Created by: DA
Business Unit(s): All
Purpose: To capture the workflow in the Feedback request.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What is the current (or desired) workflow? Please specify. Include as many details as possible.</inlineHelpText>
    <label>Description of Workflow</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>