force-app/main/default/objects/Feedback__c/fields/Impact__c.field-meta.xml
<CustomField>
    <fullName>Impact__c</fullName>
    <description>Created by: DA
Business Unit(s): All
Purpose: To capture the Impact of the Feedback request.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What is the Impact if this is not fixed/built? Impact may affect the Organization, your Colleagues, your Customers, or you as an Individual. Please specify.</inlineHelpText>
    <label>Impact (Quantitative &amp; Qualitative)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>