force-app/main/default/objects/Feedback__c/fields/of_Users_Affected__c.field-meta.xml
<CustomField>
    <fullName>of_Users_Affected__c</fullName>
    <description>Created by: DA
Business Unit(s): All
Purpose: To capture the number of affected users.</description>
    <label># of Users Affected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>