force-app/main/default/objects/Feedback__c/fields/Parent_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Parent_Feedback__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created by: DA
Business Unit(s): All
Purpose: To capture the Parent Request (if created as a child record).</description>
    <label>Parent Feedback</label>
    <referenceTo>Feedback__c</referenceTo>
    <relationshipLabel>Child Feedback</relationshipLabel>
    <relationshipName>Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>