force-app/main/default/objects/Feedback__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Created by: DA
Business Unit(s): All
Purpose: To identify the priority of the Feedback request.</description>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Critical (required for Go-Live)</fullName>
            </value>
            <value>
                <fullName>Urgent (future Go-Live)</fullName>
            </value>
            <value>
                <fullName>Valuable addition (but not required)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>