force-app/main/default/objects/Feedback__c/fields/Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created by: DA
Business Unit(s): All
Purpose: To capture who submitted the Feedback record.</description>
    <label>Submitted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>