force-app/main/default/objects/Feedback__c/fields/Submitted_By_Running_User__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By_Running_User__c</fullName>
    <formula>$User.Id =  Submitted_By__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submitted By Running User</label>
    <type>Checkbox</type>
</CustomField>