force-app/main/default/objects/Feedback__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Created by: DA
Business Unit(s): All
Purpose: To capture if the request is related to workflow that is not working properly, or new functionality to build.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bug</fullName>
            </value>
            <value>
                <fullName>Feature Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>