force-app/main/default/objects/Feedback__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Created by: DA
Business Unit(s): All
Purpose: To capture the value of the Feedback request.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please describe the value this fix/build holds to the Organization, your Colleagues, your Customers, and/or you as an Individual.</inlineHelpText>
    <label>Value (Quantitative &amp; Qualitative)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>